Bug 14070 - Fix sync dosmode fallback in async dosmode codepath
Summary: Fix sync dosmode fallback in async dosmode codepath
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-05 09:10 UTC by Ralph Böhme
Modified: 2019-11-13 07:38 UTC (History)
2 users (show)

See Also:


Attachments
Patch for 4.10 and 4.11 cherry-picked from master (1.28 KB, patch)
2019-11-07 14:37 UTC, Ralph Böhme
jra: review+
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2019-08-05 09:10:57 UTC
The async dosmode implementation has a fallback to sync processing which is triggered if SMB_VFS_GET_DOS_ATTRIBUTES_RECV() returns NT_STATUS_NOT_IMPLEMENTED.

The code creates a new struct smb_filename by calling synthetic_smb_fname() to construct an absolute path, but it passes NULL to the struct stat_ex parameter of synthetic_smb_fname() which means when this path is passed to dosmode(), the VALID_STAT() check in dosmode() fires.

Have patch, need bugnumber.
Comment 1 Ralph Böhme 2019-11-07 14:37:46 UTC
Created attachment 15608 [details]
Patch for 4.10 and 4.11 cherry-picked from master
Comment 2 Jeremy Allison 2019-11-08 00:53:10 UTC
Re-assigning to Karolin for inclusion in 4.11.next, 4.10.next.
Comment 3 Karolin Seeger 2019-11-08 09:05:31 UTC
(In reply to Jeremy Allison from comment #2)
Pushed to autobuild-v4-{11,10}-test.
Comment 4 Karolin Seeger 2019-11-13 07:38:22 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to both branches.
Closing out bug report.

Thanks!